Tab capture: Tracking continues after renderer crash.

Fixes a bug where tab capture would freeze whenever the renderer
crashes, and would not resume capturing after navigating to a new page.
There were a number of causes, all of which amounted to:

1. Having WebContentsTracker observe an extra event, RenderFrameCreated.
2. Having WebContentsTracker report on changes to RenderWidgetHostView
   instead of just RenderWidgetHost.
3. Correcting an incorrect assumption: Tracking should not halt just
   because a RenderWidgetHost lacks a view. Intsead, it is the
   destruction of the WebContents that should cause tracking to halt.

BUG=677347

Review-Url: https://codereview.chromium.org/2602923002
Cr-Commit-Position: refs/heads/master@{#441221}

Former-commit-id: 418dd6327b1241f4b667c54051ab2894c64c07a9